--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Isendpro/GIT_REPO_ID",
+    "name": "isendpro/git_repo_id",
     "description": "",
     "keywords": [
         "swagger",
